Add Unit tests to routes
